--- a/lib/x86_64-win64/usuarios.lfm
+++ b/lib/x86_64-win64/usuarios.lfm
@@ -1,9 +1,53 @@
 object FrmUsuario: TFrmUsuario
-  Left = 283
-  Height = 313
-  Top = 145
-  Width = 641
+  Left = 314
+  Height = 402
+  Top = 215
+  Width = 698
+  BorderIcons = [biSystemMenu]
   Caption = 'Uuários'
-  Position = poMainFormCenter
+  ClientHeight = 402
+  ClientWidth = 698
+  Color = clWhite
+  OnShow = FormShow
   LCLVersion = '2.0.12.0'
+  object PanelPrincipal: TPanel
+    Left = 0
+    Height = 402
+    Top = 0
+    Width = 698
+    Align = alClient
+    BevelColor = clWhite
+    ClientHeight = 402
+    ClientWidth = 698
+    Color = clWhite
+    ParentColor = False
+    TabOrder = 0
+    object PanelTopo: TPanel
+      Left = 1
+      Height = 88
+      Top = 1
+      Width = 696
+      Align = alTop
+      Color = 12615935
+      ParentColor = False
+      TabOrder = 0
+    end
+    object GroupBox1: TGroupBox
+      Left = 32
+      Height = 177
+      Top = 104
+      Width = 529
+      Caption = 'Usuários'
+      TabOrder = 1
+    end
+    object Button1: TButton
+      Left = 576
+      Height = 25
+      Top = 350
+      Width = 75
+      Caption = 'Sair'
+      OnClick = Button1Click
+      TabOrder = 2
+    end
+  end
 end
